--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
           <p style="text-align:center; color:white">Here is the link to the 
           <a href="https://www.senate.gov/">United States Senate</a>.</p>
           <img style="display:block; margin-left:auto; margin-right:auto" 
-          src="US_Capitol.jpg" width="500" height="300" alt="US Senate at the US Capitol Building"/>
+          src="images\US_Capitol.jpg" width="500" height="300" alt="US Senate at the US Capitol Building"/>
           <p style="text-align:center; color:white">Here is the mail to link for 
           <a href="https://www.senate.gov/general/contacting.htm">United States Senate</a> is here.</p> 
           </br>
@@ -23,7 +23,7 @@
           <p style="text-align:center; color:white">Here is the link to the 
           <a href="https://www.supremecourt.gov/">United States Supreme Court</a>.</p>
           <img style="display:block; margin-left:auto; margin-right:auto" 
-          src="US_Supreme_Court.jpg" width="500" height="250" alt="US Supreme Court Building"/>
+          src="images\US_Supreme_Court.jpg" width="500" height="250" alt="US Supreme Court Building"/>
           <p style="text-align:center; color:white">Here is the mail to link for 
           <a href="https://www.supremecourt.gov/contact/contactus.aspx">United States Supreme Court</a> is here.</p>
           </br>
@@ -31,7 +31,7 @@
           <p style="text-align:center; color:white">Here is the link to the 
           <a href="https://www.justice.gov/">United States Department of Justice</a>.</p>
           <img style="display:block; margin-left:auto; margin-right:auto" 
-          src="Department_of_Justice.jpg" width="600" height="300" alt="Department of Justice Building"/>
+          src="images\Department_of_Justice.jpg" width="600" height="300" alt="Department of Justice Building"/>
           <p style="text-align:center; color:white">Here is the mail to link for 
           <a href="mailto:AskDOJ@usdoj.gov">Department of Justice</a> is here.</p>
           </br>
@@ -39,7 +39,7 @@
           <p style="text-align:center; color:white">Here is the link to the 
           <a href="https://www.fbi.gov/">Federal Bureau of Investigations</a>.</p>
           <img style="display:block; margin-left:auto; margin-right:auto" 
-          src="FBI.jpg" width="750" height="500" alt="The FBI Logo"/>
+          src="images\FBI.jpg" width="750" height="500" alt="The FBI Logo"/>
           <p style="text-align:center; color:white">Here is the mail to link for 
           <a href="https://www.fbi.gov/contact-us">Federal Bureau of Investigations</a> is here.</p>
           </br>
@@ -47,7 +47,7 @@
           <p style="text-align:center; color:white">Here is the link to the 
           <a href="https://www.state.gov/">United States Department of State</a>.</p>
           <img style="display:block; margin-left:auto; margin-right:auto" 
-          src="Department_of_State.jpg" width="500" height="250" alt="Department of State Building"/>
+          src="images\Department_of_State.jpg" width="500" height="250" alt="Department of State Building"/>
           <p style="text-align:center; color:white">Here is the mail to link for 
           <a href="mailto:doswork@uic.edu">Department of State</a> is here.</p>
           </br>
@@ -55,7 +55,7 @@
           <p style="text-align:center; color:white">Here is the link to the 
           <a href="https://home.treasury.gov/">United States Department of Treasury</a>.</p>
           <img style="display:block; margin-left:auto; margin-right:auto" 
-          src="Department_of_Treasury.jpg" width="550" height="350" alt="Department of Treausry Building"/>
+          src="images\Department_of_Treasury.jpg" width="550" height="350" alt="Department of Treausry Building"/>
           <p style="text-align:center; color:white">Here is the mail to link for 
           <a href="https://home.treasury.gov/utility/contact">Department of Treasury</a> is here.</p>
 </body>
